<resources>
    <string name="app_name">PchatApp</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome_to_the_chat_app">Welcome to the Chat App</string>
    <string name="this_is_main_page">This is Main Page</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>
    <string name="login">LOGIN</string>
    <string name="your_password">Your Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_requests_page">Welcome to Requests Page</string>
    <string name="welcome_to_chats_page">Welcome to Chats Page</string>
    <string name="friends_page">Friends Page</string>
    <string name="display_name">Display Name</string>
    <string name="hey_there_i_am_using_chatapp">Hey there! I am using ChatApp.</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="your_status">Your Status</string>
    <string name="user_default_status">User Default Status</string>
    <string name="status">Status</string>
    <string name="no_of_friends">No. of friends</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="profile_image">Profile Image</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
</resources>
