<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="#000000">

    <TextView
        android:id="@+id/profile_DisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="267dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="225dp"
        android:text="@string/status"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/profile_status"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-22dp"
        android:layout_marginBottom="114dp"
        android:text="@string/no_of_friends"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/profile_image"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/profile_decline_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/profile_DisplayName"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-22dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/white" />

</RelativeLayout>